--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-python-binance==0.7.9
-pandas==1.3.4
+binance-connector-python==0.6.0
+pandas==1.5.3
+pycryptodome>=3.15.0
+python-binance==1.0.17
+termcolor==2.2.0
+websocket-client==1.5.1
