--- a/2 - BinanceDataScripts/scripts/requirements.txt
+++ b/2 - BinanceDataScripts/scripts/requirements.txt
@@ -1,5 +1,3 @@
-# jupyter==1.0.0
-# binance-connector-python==0.6.0
 python-binance==1.0.17
 mysql-connector-python==8.0.32
 pandas==1.5.3
@@ -7,3 +5,4 @@ pycryptodome>=3.15.0
 psutil==5.9.4
 termcolor==2.2.0
 websocket-client==1.5.1
+fastapi==0.95.0
