--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,26 @@ services:
     ports:  
       - "3306:3306"
     network_mode: "host" 
+    healthcheck:  
+      test: ["CMD-SHELL", "mysql --user=root --password=temp123 --execute='SELECT 1'"]  
+      interval: 10s  
+      timeout: 5s  
+      retries: 3  
   
   datascripts:  
     build: ./2 - BinanceDataScripts  
     depends_on:  
-      - db  
+      db:
+        condition: service_healthy
+    healthcheck:  
+      test: ["CMD-SHELL", "curl --fail -s http://localhost:9000/healthcheck"]  
+      interval: 10s  
+      timeout: 5s  
+      retries: 3  
     ports:
      - "9443:9443"  
-     - "443:443"  
+     - "443:443" 
+     - "9000:9000" 
     environment:  
       MYSQL_HOST: db  
       MYSQL_DATABASE: opa
@@ -25,9 +37,11 @@ services:
   
   api:  
     build: ./3 - TrainData  
-    depends_on:  
-      - db  
-      - datascripts  
+    depends_on: 
+      datascripts:
+       condition: service_healthy
+      db:
+       condition: service_healthy    
     ports:
      - "8000:8000" 
     environment:  
