--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'  
+version: '3.0'  
   
 services:  
   db:  
@@ -14,6 +14,8 @@ services:
       interval: 10s  
       timeout: 5s  
       retries: 3  
+    networks:
+      - mynetwork
   
   datascripts:  
     build: ./2 - BinanceDataScripts  
@@ -33,10 +35,11 @@ services:
       MYSQL_HOST: db  
       MYSQL_DATABASE: opa
       MYSQL_PASSWORD: temp123
-    network_mode: "host" 
+    networks:
+      - mynetwork
   
   api:  
-    build: ./3 - TrainData  
+    build: ./3 - trainData  
     depends_on: 
       datascripts:
        condition: service_healthy
@@ -48,4 +51,12 @@ services:
       MYSQL_HOST: db  
       MYSQL_DATABASE: opa
       MYSQL_PASSWORD: temp123
-    network_mode: "host" 
+    networks:
+      - mynetwork
+networks:  
+  mynetwork:  
+    driver: bridge  
+    ipam:  
+      driver: default  
+      config:  
+        - subnet: 192.168.0.0/24  
