--- a/4 - Airflow/Dockerfile
+++ b/4 - Airflow/Dockerfile
@@ -1,17 +1,15 @@
-FROM apache/airflow:latest
+FROM python:3
   
-USER root  
+# USER root  
 WORKDIR /scripts
+ENV API_HOST=api
+RUN apt-get update && apt-get install -y 
+RUN pip install apache-airflow
+RUN airflow db init
+RUN pip install requests  
+RUN airflow users create -r Admin -u airflow -p airflow -f airflow -l airflow -e airflow@airflow.com
+ 
+COPY /scripts/tasks_utils.py /usr/local/lib/python3.11/site-packages/airflow/example_dags/  
+COPY /scripts/my_dag.py /usr/local/lib/python3.11/site-packages/airflow/example_dags/
 
-RUN apt-get update && apt-get install -y \  
-    && apt-get clean \  
-    && rm -rf /var/lib/apt/lists/*  
-  
-RUN pip3 install requests  
-RUN pip3 install apache-airflow
-#wget https://dst-de.s3.eu-west-3.amazonaws.com/airflow_avance_fr/docker-compose/docker-compose.yamlRUN airflow users create --username airflow --password airflow --role Admin --email airflow@example.com --firstname test --lastname test
-  
-COPY /scripts/tasks_utils.py /usr/local/airflow/dags/  
-COPY /scripts/mon_dag.py /usr/local/airflow/dags/
-
-CMD ["airflow", "webserver", "-p", "8080"]  
+CMD ["bash", "-c", "airflow scheduler & airflow webserver -p 8080 && tail -f /scripts/predictions.csv"]   
