--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,23 @@ services:
        condition: service_healthy    
     ports:
      - "8000:8000" 
+    healthcheck:  
+      test: ["CMD-SHELL", "curl --fail -s http://localhost:8000/docs"]  
+      interval: 20s  
+      timeout: 10s  
+      retries: 5 
+      start_period: 5s 
     environment:  
       MYSQL_HOST: db  
       MYSQL_DATABASE: opa
       MYSQL_PASSWORD: temp123
+
+  airflow:
+    build: ./4 - Airflow  
+    depends_on: 
+      api:
+       condition: service_healthy   
+    ports:
+     - "8080:8080" 
+    environment:  
+      API_HOST: api
