--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,5 +61,8 @@ services:
        condition: service_healthy   
     ports:
      - "8080:8080" 
+     - "9090:9090" 
     environment:  
       API_HOST: api
+      API_USERNAME: slebib
+      API_PASSWORD: temp123
