--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     ports:
      - "9000:9000" 
     volumes:
-      - models:/trainapi/models
+      - ./models/:/mnt/models
     environment:  
       DB_HOST: db
       DB_PORT: 3306  
@@ -52,7 +52,7 @@ services:
     ports:
      - "8000:8000" 
     volumes:  
-      - models:/trainapi/models
+      - ./models/:/mnt/models
 
     healthcheck:  
       test: ["CMD-SHELL", "curl --fail -s http://localhost:8000/docs"]  
